# vex-updater

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docs.md  examples.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  sample_input.json  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/guides/: USER_GUIDES.md
examples/: examples.sh
scripts/: install.sh  setup.sh
tests/: test_debug_option.py  test_diff_engine.py  test_editor_functionality.py  test_generator.py  test_json2_support.py  test_main.py  test_updater.py
tests/fixtures/: empty_cyclonedx_vex.json  fully_triaged_cyclonedx_vex.json  large_scan_report.json  malformed_scan.json  partial_vex_same_cves.json  scan_with_duplicate_cves.json  small_scan_report.json
vex_generate_tool/: __init__.py  generator.py  main.py
vex_updater_tool/: __init__.py  diff_engine.py  error_handling.py  errors.py  generator.py  interactive_triage.py  main.py  scan_parser.py  updater.py  user_guidance.py  vex_parser.py
